--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -47,3 +47,12 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+@media screen and (max-width: 1300px) {
+  #app {
+    display: none; /* Hide content if screen width is less than 800px */
+  }
+  #not-avail {
+    display: block !important
+  }
+}
